# openwifi

./: API.txt  API.xlsx  README.md  heartbeat.sh  mach-tl-wr940n-v4.c  wget.tgz
MESHdesk/: Makefile
MESHdesk/files/: a.lua  apstart  batman_neighbours.lua  check.lua  heartbeat.lua  md_prerun  media_uci_default  meshdesk  meshdeskcbi.lua  meshdeskcontrol.lua
MESHdesk/files/alfred_scripts/: alfred_dynamic_gateway.lua  alfred_report_to_server.lua
MESHdesk/files/configs/: dhcp_network_eth_one  dhcp_network_one_eth  dhcp_network_one_eth_atheros  dhcp_network_one_eth_atheros_yuncore_xd3200  dhcp_network_one_eth_mediatek  dhcp_network_two_eth
MESHdesk/files/libs/: rdAlfred.lua  rdConfig.lua  rdFirmwareConfig.lua  rdGateway.lua  rdNetwork.lua  rdWireless.lua
activation/: Makefile
activation/files/: initd_wifimedia_check  license.sh  license_uci
advance/: Makefile
advance/files/: 00-button.hotplus  30-wlan.hotplus  35-wan_detect.hotplus  4GLTE_controller.lua  4GLTE_model.lua  advance_controller.lua  advance_model.lua  banner_  bridge_controller.lua  bridge_model.lua  btnaction  button.config  codename  controller.sh  controller_local.sh  controller_srv.sh  index.htm  initd_network_reload  settings.sh  switchmode_controller.lua  switchmode_model.lua  tat port  variables.sh  wifimedia_uci_default  wifimedia_uci_default__
advance/files/root/: advance_model.lua  gw_index.htm
advance/files/view/: sw.js
config/: CF355ACv2_vietnampost  NEWIFI3_D2_28022019  NEWIFI3_FULL_13122019  NEWIFI_D2  TPLINK_WR940NV6  WR840NV6.20  WR840NV6.20LOOP  WR841NV6_GATEWAY  cf355_feeds.conf.default  feeds.conf.default  wrt940n_feeds.conf.default  wrt940nv6_nextify_ap
hotspot/: Makefile
hotspot/files/etc/chilli/: defaults
hotspot/files/etc/init.d/: chilli  update_ip
hotspot/files/etc/uci-defaults/: hotspot
hotspot/files/sbin/wifimedia/: update_ip.sh
hotspot/files/usr/lib/lua/luci/controller/wifimedia/: hotspot.lua
hotspot/files/usr/lib/lua/luci/model/cbi/wifimedia_module/: hotspot.lua
injection/: Makefile
injection/files/etc/cfg/: privoxy.config  privoxy.init  privoxy_80.init  user.action  user.filter
injection/files/etc/priv/: user.action  user.filter  useracl.action  useracl.filter
injection/files/etc/priv/templates/: no-such-domain  url-info-osd.xml
injection/files/etc/uci-defaults/: privoxy
injection/files/sbin/wifimedia/: ads_filter.sh  ads_random.sh  adslib.sh
injection/files/usr/lib/lua/luci/controller/wifimedia/: filter.lua
injection/files/usr/lib/lua/luci/model/cbi/wifimedia_module/: filter.lua
injection/files/www/luci-static/resources/: ads_wifimedia.css
jsda/gargoyle-firewall-util/: Makefile
jsda/libiptbwctl/: Makefile
jsda/luci-app-aliddns/: Makefile
jsda/luci-app-brook/: Makefile
jsda/luci-app-cd8021x/: Makefile
jsda/luci-app-macvlan/: Makefile
jsda/luci-app-qosv4/: Makefile
jsda/luci-app-ssr-plus-jsda/: Makefile
jsda/qos-gargoyle/: Makefile
lean/UnblockNeteaseMusic/: Makefile
lean/default-settings/: Makefile
lean/luci-app-arpbind/luasrc/controller/: arpbind.lua
lean/luci-app-arpbind/luasrc/model/cbi/: arpbind.lua
lean/luci-app-arpbind/root/etc/init.d/: arpbind
lean/luci-app-arpbind/root/etc/uci-defaults/: luci-arpbind
lean/luci-app-docker/: Makefile
lean/luci-app-ssr-plus/: Makefile
lean/luci-app-syncdial/luasrc/model/cbi/: syncdial.lua
lean/luci-app-syncdial/luasrc/view/syncdial/: redial_button.htm
lean/luci-app-xlnetacc/: Makefile
lienol/luci-app-passwall/: Makefile
mtk-openwrt/openwrt-mt7610e/: Makefile
opencapwap/: Makefile
opencapwap/src/: AC.c  ACJoinState.c  ACMainLoop.c  ACMultiHomedSocket.c  ACRunState.c  CW80211ManagementFrame.c  CWCommon.h  CWLog.c  Makefile  WTP.c  WTPRadio.c  WTPipcHostapd.c  WUA.c  config.wtp  settings.wtp.txt
opencapwap/src/wum/: wum.c  wumLib.c
scheduled/: Makefile
scheduled/files/: scheduled.sh  scheduled_model.lua  scheduled_uci
scheduled/files/etc/config/: scheduled
scheduled/files/usr/lib/lua/luci/controller/wifimedia/: scheduled.lua
smartcapwap/: Makefile
smartcapwap/src/ac/: CMakeLists.txt  ac.c  ac.h  ac_execute.c
smartcapwap/src/common/: capwap.c  capwap.h  capwap_logging.h  capwap_network.c  capwap_network.h  config.h
smartcapwap/src/kmod/: capwap_private.c  iface.c  netlinkapp.c  socket.c
speedtest-c/: Makefile
speedtest-c/src/: speedtest.c
updates/: Makefile
updates/files/etc/uci-defaults/: update
updates/files/sbin/wifimedia/: updates.sh
watchdogtimer/: Makefile
watchdogtimer/files/: initd_watchcat  rssi.sh  uci_defaults_watchcat  watchcat.sh
watchping/: Makefile
watchping/files/etc/init.d/: watchping
watchping/files/etc/uci-defaults/: watching
wifi-portal/: Makefile
wifi-portal/src/: utils.c
wifimedia_portal/: Makefile
wifimedia_portal/files/: captive_portal.sh  cpn_clients_detect.sh  cpnclients.sh  del_network_nds.sh  heartbeat.sh  nodogsplash_init  nodogsplash_int__  portal_model.lua  uci_portal  wifimedia_portal.lua
wifimedia_portal/files/libs/: cpn_clients_detect.sh  heartbeat.sh  nodogsplash_preauth.sh  preauthenticated_rules.sh
